--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
         <footer class="footer">
             <button id="options-btn" class="options-button">
                 <!-- Icon and text can be added here, e.g., using an SVG -->
-                <span>Options</span>
+                <span data-i18n="options">Options</span>
             </button>
         </footer>
     </div>
