改名、使用新的icon

--- a/options.html
+++ b/options.html
@@ -10,7 +10,7 @@
         <aside class="sidebar">
             <header class="sidebar-header">
                 <img src="icons/icon-48.png" alt="Logo" class="logo">
-                <h1 data-i18n="extensionName">Zero Omega</h1>
+                <h1 data-i18n="extensionName">Proxima</h1>
             </header>
             
             <nav class="profiles-nav">
@@ -44,7 +44,7 @@
         <main id="main-content" class="main-content">
             <!-- Profile editor or other content will be loaded here -->
             <div class="welcome-pane">
-                <h2 data-i18n="welcomeHeader">Welcome to Zero Omega</h2>
+                <h2 data-i18n="welcomeHeader">Welcome to Proxima</h2>
                 <p data-i18n="welcomeMessage">Select a profile on the left to get started, or create a new one.</p>
             </div>
         </main>
